# auto-tuner

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/experiments/: sample_experiment.toml
examples/: project.example.toml  project.example.yaml  sample_experiment.toml  sample_experiment.yaml
examples/prompts/: meta_prompt.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
src/auto_tuner/: cli.py  config.py
src/auto_tuner/agents/: supervisor_agent.py  worker_agent.py  workspace_agent.py
src/auto_tuner/backends/: __init__.py  base.py  fake.py  mlx_tune.py  mlx_tune_runner.py  unsloth_sdk.py
src/auto_tuner/llm/: __init__.py  openrouter.py
src/auto_tuner/models/: __init__.py  dataset.py  run.py  training.py
src/auto_tuner/pipeline/: __init__.py  display.py  generate.py  grade.py  orchestrator.py  refine.py
src/auto_tuner/storage/: artifacts.py  runs.py
src/auto_tuner/telemetry/: __init__.py  gpu.py  system.py
src/auto_tuner/web/: app.py
tests/: conftest.py
tests/e2e/: test_cli_pipeline.py  test_web_run_flow.py
tests/fixtures/: sample_experiment.toml
tests/support/: openrouter_stub.py
tests/unit/: test_backend_contract.py  test_config.py  test_generate.py  test_grade.py  test_refine.py
